[gd_scene load_steps=9 format=3 uid="uid://1ap3xiiou100"]

[ext_resource type="Script" path="res://scripts/hud_manager.gd" id="1_u5od3"]
[ext_resource type="FontFile" uid="uid://cpn3kcsxkx22i" path="res://assets/fonts/RevMiniPixel.ttf" id="2_isddl"]
[ext_resource type="Texture2D" uid="uid://dgfvrh8yg3sch" path="res://assets/Mini FX, Items & UI/Mini FX, Items & UI/Common Pick-ups/00_Coin-Sprites.png" id="3_py50w"]
[ext_resource type="Texture2D" uid="uid://byt5ar30rr4lk" path="res://assets/Mini FX, Items & UI/Mini FX, Items & UI/Common Pick-ups/01_Coin-Sprites.png" id="4_f4ijs"]
[ext_resource type="Texture2D" uid="uid://dn4vcy65s8hmt" path="res://assets/Mini FX, Items & UI/Mini FX, Items & UI/Common Pick-ups/02_Coin-Sprites.png" id="5_druqe"]
[ext_resource type="Texture2D" uid="uid://bstuh08nhmt8u" path="res://assets/Mini FX, Items & UI/Mini FX, Items & UI/Common Pick-ups/03_Coin-Sprites.png" id="6_7rmhx"]
[ext_resource type="Texture2D" uid="uid://bvkbyeuww3dcr" path="res://assets/Mini FX, Items & UI/Mini FX, Items & UI/Mini UI/Health_Indicator_Black_Outline (8 x 8).png" id="7_qe2es"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_o5yal"]
frames = 4
speed_scale = 5.0
frame_0/texture = ExtResource("3_py50w")
frame_1/texture = ExtResource("4_f4ijs")
frame_1/duration = 1.0
frame_2/texture = ExtResource("5_druqe")
frame_2/duration = 1.0
frame_3/texture = ExtResource("6_7rmhx")
frame_3/duration = 1.0

[node name="HUD" type="CanvasLayer"]

[node name="control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5od3")
default_minutes = 3

[node name="clock_timer" type="Timer" parent="control2"]
autostart = true

[node name="container" type="MarginContainer" parent="control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="timer_container" type="HBoxContainer" parent="control2/container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="timer_label" type="Label" parent="control2/container/timer_container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "TIME:"
vertical_alignment = 1

[node name="timer_counter" type="Label" parent="control2/container/timer_container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "00:00"
vertical_alignment = 1

[node name="score_container" type="HBoxContainer" parent="control2/container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="score_label" type="Label" parent="control2/container/score_container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "SCORE:
"
vertical_alignment = 1

[node name="score_counter" type="Label" parent="control2/container/score_container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "000
"
vertical_alignment = 1

[node name="coins_container" type="HBoxContainer" parent="control2/container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="coins_icon" type="TextureRect" parent="control2/container/coins_container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AnimatedTexture_o5yal")

[node name="coins_counter" type="Label" parent="control2/container/coins_container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "000
"
vertical_alignment = 1

[node name="collectables" type="HBoxContainer" parent="control2/container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="whiskys_container" type="HBoxContainer" parent="control2/container/collectables"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="whiskys_label" type="Label" parent="control2/container/collectables/whiskys_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "WHISKY
"
vertical_alignment = 1

[node name="whiskys_counter" type="Label" parent="control2/container/collectables/whiskys_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "000
"
vertical_alignment = 1

[node name="pringles_container" type="HBoxContainer" parent="control2/container/collectables"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="pringles_label" type="Label" parent="control2/container/collectables/pringles_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "PRINGLES
"
vertical_alignment = 1

[node name="pringles_counter" type="Label" parent="control2/container/collectables/pringles_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "000
"
vertical_alignment = 1

[node name="perfumes_container" type="HBoxContainer" parent="control2/container/collectables"]
layout_mode = 2
size_flags_vertical = 8

[node name="perfumes_label" type="Label" parent="control2/container/collectables/perfumes_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "PERFUMES
"
vertical_alignment = 1

[node name="perfumes_counter" type="Label" parent="control2/container/collectables/perfumes_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "000
"
vertical_alignment = 1

[node name="iphones_container" type="HBoxContainer" parent="control2/container/collectables"]
layout_mode = 2
size_flags_vertical = 8

[node name="iphones_label" type="Label" parent="control2/container/collectables/iphones_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "IPHONES
"
vertical_alignment = 1

[node name="iphones_counter" type="Label" parent="control2/container/collectables/iphones_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "000
"
vertical_alignment = 1

[node name="life_container" type="HBoxContainer" parent="control2/container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="life_icon" type="TextureRect" parent="control2/container/life_container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("7_qe2es")
stretch_mode = 1
flip_h = true

[node name="life_separator" type="Label" parent="control2/container/life_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "X
"
vertical_alignment = 1

[node name="life_counter" type="Label" parent="control2/container/life_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_isddl")
theme_override_font_sizes/font_size = 8
text = "03
"
vertical_alignment = 1

[connection signal="timeout" from="control2/clock_timer" to="control2" method="_on_clock_timer_timeout"]
